--- a/scss/components/_dropdown-menu.scss
+++ b/scss/components/_dropdown-menu.scss
@@ -37,7 +37,7 @@
         left: 0;
         top: 100%;
         display: none;
-        background-color: #417690;
+        //background-color: #417690;
         min-width: 150px;
     }
 
